--- a/public/index.html
+++ b/public/index.html
@@ -25,10 +25,10 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
 
-    <link
+    <!-- <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
-    />
+    /> -->
     <!-- <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" /> -->
 
     <title>React App</title>
